@@ -1,14 +1,0 @@
-[Desktop Entry]
-Name=Pidgin
-GenericName=Internet Messenger
-Comment=Chat over IM.  Supports AIM, Google Talk, Jabber/XMPP, and more
-Exec=purple-url-handler %u
-TryExec=purple-url-handler
-Icon=pidgin
-StartupNotify=false
-Terminal=false
-NoDisplay=true
-Type=Application
-Categories=Network;InstantMessaging;RemoteAccess;ConsoleOnly;
-MimeType=x-scheme-handler/aim;x-scheme-handler/gg;x-scheme-handler/icq;x-scheme-handler/irc;x-scheme-handler/msnim;x-scheme-handler/sip;x-scheme-handler/xmpp;x-scheme-handler/ymsgr
-@USES_MM_CHAT_SECTION@
